# instance_manager

./: .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  PROJECT_SUMMARY.sh  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  hooks.py  install.sh  modules.txt  package.json  pyproject.toml  setup.py
instance_manager/: __init__.py  commands.py  hooks.py  modules.txt  permissions.py
instance_manager/doc_events/: user.py
instance_manager/doctype/instance_settings/: instance_settings.json  instance_settings.py
instance_manager/instance_manager/: permissions.py
instance_manager/instance_manager/doc_events/: user.py
instance_manager/instance_manager/doctype/: __init__.py
instance_manager/instance_manager/doctype/instance_settings/: instance_settings.json  instance_settings.py
instance_manager/instance_manager/utils/: instance_utils.py
instance_manager/instance_manager/workspace/instance_manager/: instance_manager.json
instance_manager/public/: node_modules
instance_manager/public/css/: instance_manager.css
instance_manager/public/js/: instance_manager.js
instance_manager/utils/: instance_utils.py
instance_manager/workspace/instance_manager/: instance_manager.json
