[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instance_manager"
authors = [
    {name = "Your Organization", email = "info@example.com"}
]
description = "Manage instance limits, user counts, and license expiry for Frappe"
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
version = "1.0.0"

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["instance_manager*"]
